# app/Http/Resources/ProtocoloResource.php
@@ -1,0 +1,27 @@
+<?php
+
+namespace App\Http\Resources;
+
+use Illuminate\Http\Request;
+use Illuminate\Http\Resources\Json\JsonResource;
+
+class ProtocoloResource extends JsonResource
+{
+    /**
+     * Transform the resource into an array.
+     *
+     * @return array<string, mixed>
+     */
+    public function toArray(Request $request): array
+    {
+        return [
+            'id' => $this->id,
+            'file_path' => $this->file_path,
+            'status' => $this->status,
+            'justificativa' => $this->justificativa,
+            'created_at' => $this->created_at,
+            'updated_at' => $this->updated_at,
+            'aluno' => AlunoFeedbackResource::make($this->aluno),
+        ];
+    }
+}
